--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -12746,6 +12746,7 @@ h5,
 .product {
   display: block;
   width: 100%;
+  height: 400px;
   margin-bottom: 30px;
   position: relative;
   z-index: 0;
@@ -12772,6 +12773,7 @@ h5,
   box-shadow: inset 0px 0px 101px 21px rgba(0, 0, 0, 0.09);
   background: #fff;
   z-index: 1;
+  text-align: center;
 }
 
 .product .img-prod .overlay {
@@ -12836,11 +12838,14 @@ h5,
   -webkit-transition: all 1s ease;
   -ms-transition: all 1s ease;
   transition: all 1s ease;
+  max-height: 500px !important;
+  object-fit: cover;
 }
 
 .product .img {
   display: block;
-  height: 500px;
+  max-height: 500px !important;
+  object-fit: cover;
 }
 
 .product .icon {
